(No changes)

New Features
---------------------
* LUCENE-10654: Add new ShapeDocValuesField for LatLonShape and XYShape. (Nick Knize)

* LUCENE-10629: Support match set filtering with a query in MatchingFacetSetCounts. (Stefan Vodita, Shai Erera)

Improvements
---------------------
* LUCENE-10592: Build HNSW Graph on indexing. (Mayya Sharipova, Adrien Grand, Julie Tibshirani)

Optimizations
---------------------

* LUCENE-10661: Reduce memory copy in BytesStore. (luyuncheng)

* GITHUB#1020: Support #scoreSupplier and small optimizations to DocValuesRewriteMethod. (Greg Miller)

* LUCENE-10633: Added support for dynamic pruning to queries sorted by a string
  field that is indexed with terms and SORTED or SORTED_SET doc values.
  (Adrien Grand)

* LUCENE-10627: Using ByteBuffersDataInput reduce memory copy on compressing data. (luyuncheng)

* GITHUB#1062: Optimize TermInSetQuery when a term is present that matches all docs in a segment.
  (Greg Miller)

Bug Fixes
---------------------
* LUCENE-10663: Fix KnnVectorQuery explain with multiple segments. (Shiming Li)

* LUCENE-10673: Improve check of equality for latitudes for spatial3d GeoBoundingBox (ignacio Vera)

* LUCENE-10678: Fix potential overflow when building a BKD tree with more than 4 billion points. The overflow
  occurs when computing the partition point. (Ignacio Vera)

* LUCENE-10644: Facets#getAllChildren testing should ignore child order. (Yuting Gan)

* LUCENE-10665, GITHUB#11701: Fix classloading deadlock in analysis factories / AnalysisSPILoader
  initialization.  (Uwe Schindler)

Build
---------------------

* LUCENE-10669: The build should be more helpful when generated resources are touched (Dawid Weiss)

Other
---------------------
* LUCENE-10559: Add Prefilter Option to KnnGraphTester (Kaival Parikh)

======================== Lucene 9.3.0 =======================

API Changes
---------------------

* LUCENE-10603: SortedSetDocValues#NO_MORE_ORDS marked @deprecated in favor of iterating with